Add code cache to JVM max memory calculation.